crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enum_struct_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 197
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    int foo;\n}\n\nFoo foo;\n     |\n     ^\n\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 4,
        "character": 4
      },
      "end": {
        "line": 4,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 4,
        "character": 4
      },
      "end": {
        "line": 4,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 4,
        "character": 4
      },
      "end": {
        "line": 4,
        "character": 7
      }
    }
  }
]
