crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__enum_struct_method_3.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 361
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    void foo(int bar) {\n                  |\n                  ^\n    };\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 20
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    }
  }
]
